--- a/app/India_COVID19.html
+++ b/app/India_COVID19.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>India SARS-CoV2 statewise statistics</title>
+    <link rel="icon" href="https://moad.computer/static/icons/logo.png">
     <style>
       *{
         font-family:'Times New Roman', Times, serif;
