Updated SARS-CoV2 case statistics web app for 26th August 2025 ...

--- a/app/India_COVID19.html
+++ b/app/India_COVID19.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>India SARS-CoV2 statewise statistics</title>
+    <link rel='icon' href='https://moad.computer/static/icons/logo.png'>
     <style>
       html, body {
         box-sizing: border-box;
