Updated SARS-CoV2 case statistics for 28th December 2025 ...

--- a/app/India_SARS_CoV2.html
+++ b/app/India_SARS_CoV2.html
@@ -3,7 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>India SARS-CoV2 statewise statistics</title>
+    <link rel='icon' href='https://moad.computer/static/icons/logo.png'>
     <style>
+    *{
+        font-family:'Times New Roman', Times, serif;
+        font-size: 15px;
+        font-weight:'bold';
+        user-select: none;
+        touch-action: none;
+        -webkit-touch-callout: none !important;
+        -webkit-tap-highlight-color: transparent;
+        -moz-user-select: -moz-none;
+        -webkit-user-select: none !important;
+        -ms-user-select: none;
+        -webkit-touch-action: none;
+        -moz-touch-action: none;
+        scroll-behavior: smooth;
+      }
       html, body {
         box-sizing: border-box;
         display: flow-root;
